# jipu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang-format  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  application.cpp  application.h  main.cpp  pipeline.cpp  pipeline.h  triangle.vert  triangle_vert.spv  utils.cpp  window.h  window_cocoa.mm  window_win32.cpp
jipu/: CMakeLists.txt  jipu_proc.cpp  webgpu_header.h  webgpu_proc.cpp
jipu/common/: dylib.cpp  dylib.h  gpu_info.h  ref.cpp  ref.h  ref_counted.cpp  ref_counted.h  result.h
jipu/gpu/: buffer.cpp  command_buffer.cpp  pipeline_layout.cpp  shader_module.cpp  texture.cpp
jipu/gpu/vulkan/: vulkan_binding_group.h  vulkan_command_buffer.h  vulkan_device.h  vulkan_physical_device.h  vulkan_pipeline_layout.h  vulkan_queue.h  vulkan_render_pass.h  vulkan_render_pass_encoder.h  vulkan_sampler.h  vulkan_surface.h  vulkan_swapchain.h
jipu/include/: export.h
jipu/include/jipu/: adapter.h  binding_group.h  binding_group_layout.h  buffer.h  command_buffer.h  command_encoder.h  compute_pass_encoder.h  device.h  driver.h  instance.h  physical_device.h  pipeline.h  pipeline_layout.h  query_set.h  queue.h  render_pass_encoder.h  sampler.h  shader_module.h  surface.h  swapchain.h  texture.h  texture_view.h
jipu/source/: binding_group.cpp  binding_group_layout.cpp  command_encoder.cpp  compute_pass_encoder.cpp  driver.cpp  physical_device.cpp  pipeline.cpp  render_pass_encoder.cpp  sampler.cpp  shader_module.cpp  surface.cpp  swapchain.cpp  texture.cpp
jipu/source/jipu/: driver.cpp  instance.cpp
jipu/source/vulkan/: vulkan_adapter.cpp  vulkan_adapter.h  vulkan_api.cpp  vulkan_api.h  vulkan_binding_group.cpp  vulkan_binding_group.h  vulkan_binding_group_layout.cpp  vulkan_binding_group_layout.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_encoder.cpp  vulkan_command_encoder.h  vulkan_compute_pass_encoder.cpp  (+51 more)
jipu/utils/: cast.h  dylib.cpp  fmt.h  gpu_info.cpp
jipu/webgpu/: webgpu_adapter.cpp  webgpu_adapter.h  webgpu_bind_group.cpp  webgpu_bind_group.h  webgpu_bind_group_layout.cpp  webgpu_bind_group_layout.h  webgpu_buffer.cpp  webgpu_buffer.h  webgpu_command_buffer.cpp  webgpu_command_buffer.h  webgpu_command_encoder.cpp  webgpu_command_encoder.h  webgpu_device.cpp  webgpu_device.h  webgpu_instance.cpp  webgpu_instance.h  webgpu_pipeline_layout.cpp  webgpu_pipeline_layout.h  webgpu_queue.cpp  webgpu_queue.h  webgpu_render_pass_encoder.cpp  webgpu_render_pass_encoder.h  webgpu_render_pipeline.cpp  webgpu_render_pipeline.h  webgpu_sampler.cpp  webgpu_sampler.h  webgpu_shader_module.cpp  webgpu_shader_module.h  webgpu_surface.cpp  webgpu_surface.h  webgpu_texture.cpp  webgpu_texture.h  webgpu_texture_view.cpp  webgpu_texture_view.h
sample/: CMakeLists.txt
sample/android/: build.gradle  gradle.properties  settings.gradle
sample/apps/: CMakeLists.txt
sample/base/: CMakeLists.txt  camera.cpp  camera.h  debug_gui.cpp  debug_gui.h  file.cpp  file.h  fps.cpp  fps.h  gui.cpp  gui.h  hpc_watcher.cpp  hpc_watcher.h  hwcpipe.cpp  hwcpipe.h  im_gui.cpp  im_gui.h  image.cpp  image.h  jpeg.cpp  jpeg.h  khronos_texture.cpp  khronos_texture.h  light.cpp  light.h  model.cpp  model.h  offscreen_swapchain.cpp  offscreen_swapchain.h  sample.cpp  sample.h  vertex.cpp  vertex.h  vkt_headers.h  wgpu_sample.cpp  wgpu_sample.h  window.cpp  window.h  window_android.cpp  window_cocoa.mm  (+2 more)
sample/utils/: AndroidGPUCounter.h  CMakeLists.txt  GPUCounter.h
samples/: CMakeLists.txt
src/: CMakeLists.txt  compiler.h  export.h
src/cmake/: install.cmake
src/gpu/: adapter.cpp  adapter.h  binding_group.cpp  binding_group_layout.cpp  buffer.cpp  command_encoder.cpp  compute_pass_encoder.cpp  context.cpp  context.h  device.cpp  device.h  driver.cpp  driver.h  framebuffer.cpp  framebuffer.h  physical_device.cpp  pipeline.cpp  pipeline.h  pipeline_layout.cpp  platform.cpp  platform.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  render_pass_encoder.cpp  sampler.cpp  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  texture_view.cpp  texture_view.h
src/jipu/: binding_group.cpp  binding_group_layout.cpp  command_buffer.cpp  driver.cpp  physical_device.cpp  pipeline_layout.cpp  texture_view.cpp
src/source/: buffer.cpp  device.cpp  queue.cpp  render_pass_encoder.cpp
src/utils/: cast.h  dylib.h  dynamic_lib.cpp  file.cpp  file.h  fmt.h
src/vk/: adapter.cpp  adapter.h  allocation.h  context.cpp  context.h  device.cpp  device.h  device_features.cpp  driver.cpp  driver.h  instance.cpp  pipeline.cpp  pipeline.h  platform.cpp  platform.h  platform_macos.cpp  platform_macos.h  platform_macos.mm  platform_windows.cpp  platform_windows.h  precompile.h  queue.cpp  surface.cpp  surface.h  swap_chain.cpp  swap_chain.h  swapchain.cpp  swapchain.h  visibility.h
test/: CMakeLists.txt  buffer_test.cpp  buffer_test.h  copy_test.cpp  copy_test.h  device_test.cpp  device_test.h  main.cpp  particle_test.cpp  particle_test.h  queue_test.cpp  queue_test.h  submit_test.cpp  submit_test.h  test_driver.h  texture_test.cpp  texture_test.h
test/base/: CMakeLists.txt  offscreen_test.cpp  offscreen_test.h  test.cpp  test.h  window_test.cpp  window_test.h  window_test_cocoa.mm  window_test_win32.cpp
test/vk/: test_allocation_callbacks.cpp  test_device.cpp  test_device_features.cpp  test_instance.cpp  test_physical_device.cpp  test_surface.cpp
test/window/: window_test.cpp  window_test.h  window_test_win32.cpp
vkt/: CMakeLists.txt
vkt/gpu/: binding_group.cpp  binding_group_layout.cpp  buffer.cpp  command.cpp  command_buffer.cpp  command_encoder.cpp  compute_pass_encoder.cpp  device.cpp  driver.cpp  physical_device.cpp  pipeline.cpp  pipeline_layout.cpp  queue.cpp  render_pass_encoder.cpp  sampler.cpp  shader_module.cpp  surface.cpp  swapchain.cpp  texture.cpp  texture_view.cpp
vkt/utils/: assert.h  bitwise.h  dylib.cpp  dylib.h  dynamic_lib.cpp  dynamic_lib.h  hash.h  log.h
(+636 files in other folders)
